syntax = "proto3";

package go.micro.service.getCaptcha;

service GetCaptcha {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
}

message Request {
	string number = 1;
	int32  cacheLiveTime = 2;
	string uuid = 3;
}

message Response {
	string number = 1;
	bytes image = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
