syntax = "proto3";

package go.micro.service.sendSMS;

service SendSMS {
	rpc send(Request) returns (Response) {}
}

message Message {
}

enum SMSType {
    Register  = 0;
}

message Request {
	string phone = 1;
	int32 codeLen = 2;
    SMSType Type = 3;
}


message Response {
	string phone = 1;
	int32 code = 2;
}